--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,16 +3,12 @@ name: Test
 jobs:
   Build:
     runs-on: ubuntu-latest
-    steps: null
-    - name: first job
-      run: |
-      pwd
-      touch file.txt
-      ls -la
+    steps:
+      - name: first job
+        run: pwd
   Test:
     needs: Build
     run-on: ubuntu-latest
-    steps: null
-    - name: Second job
-      run: |
-      echo "hello world"
+    steps:
+      - name: Second job
+        run: echo "hello world"
