--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,13 @@ jobs:
       - name: first job
         run: pwd
   Test:
-    
+    needs: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Second job
+        run: echo "hello world"
+  Test:
+    needs: Build
     runs-on: ubuntu-latest
     steps:
       - name: Second job
